<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/plane"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/plane"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/otp_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/plane" />

            <TextView
                android:id="@+id/otp_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_description"
                app:layout_constraintTop_toBottomOf="@id/otp_verification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/enter_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number"
                app:layout_constraintTop_toBottomOf="@id/otp_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_number"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91- "
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:hint="8982735495"
                    android:imeOptions="actionDone"
                    android:background="@null"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:importantForAutofill="no"
                    android:maxLength="10"
                    android:inputType="number"

                    />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number_layout"
                android:background="@color/divider" />

            <ProgressBar
                android:id="@+id/get_progress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_get_Otp"
                />

            <Button
                android:id="@+id/btn_get_Otp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/get_otp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/button_bkg" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>