<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".OtpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/get_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/get_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp" />


            <TextView
                android:id="@+id/otp_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/get_img" />

            <TextView
                android:id="@+id/enter_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_otp_sent_to"
                app:layout_constraintTop_toBottomOf="@id/otp_verification"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/enter_otp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/Otp_box_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/number"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/otp_box1"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor" />

                <EditText
                    android:id="@+id/otp_box2"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor"

                    />

                <EditText
                    android:id="@+id/otp_box3"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor" />

                <EditText
                    android:id="@+id/otp_box4"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor" />

                <EditText
                    android:id="@+id/otp_box5"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor" />

                <EditText
                    android:id="@+id/otp_box6"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:textColor="@color/black"
                    android:layout_marginStart="4dp"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textStyle="bold"
                    tools:ignore="LiableFor" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/resend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Otp_box_layout"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/get_opt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_t_get_the_otp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/get_opt"
                    android:text="@string/resend_otp"
                    android:textAllCaps="true"
                    android:textColor="@color/button"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/verify_progress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/verify_btn"
                />


            <Button
                android:id="@+id/verify_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/resend_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/verify"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/button_bkg" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

